@@ -72,6 +72,10 @@ typedef struct sTagEntryInfo {
 	const char* inheritance;
 	const char* scope [2];	/* value and key */
 	const char* signature;
+
+	/* type (union/struct/etc.) and name for a variable or typedef. */
+	const char* typeRef [2];	/* e.g., "struct" and struct name */
+
     } extensionFields;		/* list of extension fields*/
 } tagEntryInfo;
 
